--- a/VSite.css
+++ b/VSite.css
@@ -707,4 +707,13 @@ iframe:hover{
         margin-left: auto;
         margin-bottom: 30px;
     }
+    iframe:hover{
+        width: 85%;
+        height: 200px;
+        font-size: 10px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 30px;
+
+    }
 }
