--- a/VSite.css
+++ b/VSite.css
@@ -102,7 +102,6 @@ html{
     margin-top: 400px;
     scroll-snap-align: center;
     height: 800px;
-
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -498,7 +497,7 @@ iframe{
         font-size: 20px;
         height: 100px;
         margin-bottom: 1px;
-        border-radius: 50px;
+        border-radius: 30px;
         border-width: 2px;
         border-style: solid;
         border-color: white;
@@ -517,7 +516,7 @@ iframe{
         opacity: 0.95;
     }
     #content{
-        padding-top: 400px;
+        padding-top: 150px;
         padding-bottom: 400px;
         padding-left: 5%;
         height: 100%;
@@ -526,7 +525,6 @@ iframe{
         background-attachment: fixed;
         background-position: left;
         background-size: cover;
-
         scroll-snap-align: center;
     }
     #icontent{
@@ -569,7 +567,7 @@ iframe{
         justify-content: none;
         display: block;
         border-color:white;
-        border-radius: 50px;
+        border-radius: 15px;
         border-style: solid;
         border-color: #fff;
         border-width: 2px;
@@ -736,7 +734,7 @@ iframe{
         opacity: 0.95;
         font-size: 15px;
         background-color: #144272;
-        line-height: 0.1;
+        line-height: 0.5;
     }
     #icontentf{
         font-size: 7px;
@@ -744,4 +742,8 @@ iframe{
     #icontent1{
         font-size: 9px;
     }
+}
+@media only screen and (min-height: 710px) {
+    #box{padding-top: 18%;}
+    
 }
